Fixing the escaping of the { character